Fixed hover wrap on mouse follower

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1913,6 +1913,7 @@ body {
   display: flex;
   align-items: start;
   justify-content: center;
+  white-space: nowrap;
 }
 .hover-mouse-follower > * {
   position: absolute;
